[package]
name = "axfs_devfs"
edition = "2021"
description = "Device filesystem used by ArceOS"
documentation = "https://docs.rs/axfs_devfs"
keywords = ["arceos", "filesystem", "devfs"]
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
axfs_vfs.workspace = true
spin = "0.9"
log = "0.4"
