[package]
name = "axfs_ramfs"
edition = "2021"
description = "RAM filesystem used by ArceOS"
documentation = "https://docs.rs/axfs_ramfs"
keywords = ["arceos", "filesystem", "ramfs"]
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
axfs_vfs.workspace = true
spin = "0.9"
log = "0.4"
